Adds assignment push + pull handlers
