# documentation/openapi/paths.yml
@@ -1184,3 +1184,114 @@ permissions:
             schema:
               $ref: "./schemas.yml#/components/schemas/ErrorMessage"
 
+versionControlPull:
+  get:
+    security:
+      - hub_auth:
+        - instructor
+        - tutor
+        - student
+    summary: Pulls an assignment to the specified repo
+    tags:
+    - Version Control
+    parameters:
+    - name: lect_id
+      in: path
+      description: ID of the lecture
+      required: true
+      example: 1
+      schema:
+        type: integer
+        format: int64
+    - name: a_id
+      in: path
+      description: ID of the assignment in the lecture
+      required: true
+      example: 2
+      schema:
+        type: integer
+        format: int64
+    - name: repo
+      in: path
+      description: The identifier of the repo
+      required: true
+      schema:
+        type: string
+        enum:
+          - "user"
+          - "group"
+          - "release"
+          - "source"
+    responses:
+      200:
+        description: OK
+      403:
+        description: Unautorized
+      404:
+        description: Lecture id, assignment id or repo not found.
+        content: 
+          application/json:
+            schema:
+              $ref: "./schemas.yml#/components/schemas/ErrorMessage"
+      500:
+        description: Internal server error
+        content: 
+          application/json:
+            schema:
+              $ref: "./schemas.yml#/components/schemas/ErrorMessage"
+
+versionControlPush:
+  put:
+    security:
+      - hub_auth:
+        - instructor
+        - tutor
+        - student
+    summary: Pushes an assignment to the specified repo
+    tags:
+    - Version Control
+    parameters:
+    - name: lect_id
+      in: path
+      description: ID of the lecture
+      required: true
+      example: 1
+      schema:
+        type: integer
+        format: int64
+    - name: a_id
+      in: path
+      description: ID of the assignment in the lecture
+      required: true
+      example: 2
+      schema:
+        type: integer
+        format: int64
+    - name: repo
+      in: path
+      description: The identifier of the repo
+      required: true
+      schema:
+        type: string
+        enum:
+          - "user"
+          - "group"
+          - "release"
+          - "source"
+    responses:
+      200:
+        description: OK
+      403:
+        description: Unautorized
+      404:
+        description: Lecture id, assignment id or repo not found.
+        content: 
+          application/json:
+            schema:
+              $ref: "./schemas.yml#/components/schemas/ErrorMessage"
+      500:
+        description: Internal server error
+        content: 
+          application/json:
+            schema:
+              $ref: "./schemas.yml#/components/schemas/ErrorMessage"
